--- a/.config/hypr/conf/bindings.conf
+++ b/.config/hypr/conf/bindings.conf
@@ -1,43 +1,39 @@
-###################
-### KEYBINDINGS ###
-###################
-
-bindid = Super, Super_L, Toggle overview, global, quickshell:overviewToggleRelease # Toggle overview/launcher
-bindid = Super, Super_R, Toggle overview, global, quickshell:overviewToggleRelease # [hidden] Toggle overview/launcher
-bind = Super, Super_L, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
-bind = Super, Super_R, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
-# binditn = Super, catchall, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Ctrl, Super_L, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Ctrl, Super_R, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, uwsm app -- $terminal
-bind = $mainMod, Tab, cyclenext,
-bind = $mainMod SHIFT, Tab, cyclenext, prev
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exit,
-bind = $mainMod, F, exec, uwsm app -- $fileManager
-bind = $mainMod, E, exec, uwsm app -- $mail
-bind = $mainMod, C, togglefloating,
-bind = $mainMod, SPACE, exec, uwsm app -- bash -c "$menu"
-bind = $mainMod, F2, exec, uwsm app -- $cmd
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, U, togglesplit, # dwindle
-bind = $mainMod, B, exec, uwsm app -- $browser
-
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, j, movefocus, d
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, l, movefocus, r
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, j, movewindow, d
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, l, movewindow, r
 
-# Navigate workspaces with mainMod + arrow keys
-bind = $mainMod, Left, workspace, e-1
-bind = $mainMod, Right, workspace, e+1
+bind = $mainMod, Tab, cyclenext,
+bind = $mainMod SHIFT, Tab, cyclenext, prev
 
 # Move window to workspace and follow
 bind = $mainMod SHIFT, Left, movetoworkspace, e-1
 bind = $mainMod SHIFT, Right, movetoworkspace, e+1
+
+# Window tile style
+bind = $mainMod, C, togglefloating,
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, U, togglesplit, # dwindle
+
+# Apps
+bind = $mainMod, T, exec, uwsm app -- $terminal
+bind = $mainMod, F2, exec, uwsm app -- $cmd
+bind = $mainMod, F, exec, uwsm app -- $fileManager
+bind = $mainMod, E, exec, uwsm app -- $mail
+bind = $mainMod, B, exec, uwsm app -- $browser
+bind = $mainMod, SPACE, exec, uwsm app -- bash -c "$menu"
+
+bind = $mainMod, Q, killactive,
+bind = $mainMod SHIFT, Q, exit,
+
+# Navigate workspaces with mainMod + arrow keys
+bind = $mainMod, Left, workspace, e-1
+bind = $mainMod, Right, workspace, e+1
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -90,9 +86,9 @@ bindl = , XF86AudioPlay , exec, uwsm app -- playerctl play-pause
 bindl = , XF86AudioPrev , exec, uwsm app -- playerctl previous
 
 # Screenshots
-bind = $mainMod      , PRINT, exec, uwsm app -- hyprshot -m window
 bind =               , PRINT, exec, uwsm app -- hyprshot -m output
-bind = $mainMod SHIFT, PRINT, exec, uwsm app -- hyprshot -m region
+bind = $mainMod      , PRINT, exec, uwsm app -- slurp | hyprshot -m window
+bind = $mainMod SHIFT, PRINT, exec, uwsm app -- slurp -d | hyprshot -m region
 
 # Notifications
 bind = $mainMod, N, exec, uwsm app -- swaync-client -t
