--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,3 +10,4 @@ dynamic_background_opacity yes
 map ctrl+equal change_font_size current +2.0
 map ctrl+minus change_font_size current -2.0
 font_size 16
+font_family JetBrainsMono Nerd Font Mono
