--- a/.config/hypr/conf/bindings.conf
+++ b/.config/hypr/conf/bindings.conf
@@ -12,8 +12,8 @@ bind = $mainMod, Tab, cyclenext,
 bind = $mainMod SHIFT, Tab, cyclenext, prev
 
 # Move window to workspace and follow
-bind = $mainMod SHIFT, Left, movetoworkspace, e-1
-bind = $mainMod SHIFT, Right, movetoworkspace, e+1
+bind = $mainMod CTRL, h, movetoworkspace, e-1
+bind = $mainMod CTRL, l, movetoworkspace, e+1
 
 # Window tile style
 bind = $mainMod, C, togglefloating,
@@ -26,7 +26,7 @@ bind = $mainMod, F2, exec, uwsm app -- $cmd
 bind = $mainMod, F, exec, uwsm app -- $fileManager
 bind = $mainMod, E, exec, uwsm app -- $mail
 bind = $mainMod, B, exec, uwsm app -- $browser
-bind = $mainMod, SPACE, exec, uwsm app -- bash -c "$menu"
+bind = SUPER, SUPER_L, exec, $menu
 
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
