--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,11 +2,9 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 $terminal    = kitty
 $fileManager = nautilus
-$menu        = XDG_DATA_DIRS=$XDG_DATA_DIRS:~/.local/share/flatpak/exports/share rofi -drun-reload-desktop-cache -show-icons -terminal kitty -modi drun,run -show drun
-$switch      = ~/.config/waybar/scripts/rofi-hypr-windows.sh
+$menu        = vicinae
 $mail        = flatpak run org.gnome.Geary
 $browser     = flatpak run app.zen_browser.zen
-$cmd         = ~/.config/rofi/scripts/rofi-background-command
 
 
 ################
@@ -227,6 +225,15 @@ windowrulev2 = nodim,class:^zen$
 
 # Make active kitty fully opaque, inactive stays at kitty's built-in transparency
 windowrulev2 = opacity 1.0 0.8,class:^kitty$
+
+# Vicinae launcher overlay effect
+
+# hyprpolkitagent disabled - using quickshell-polkit-agent instead
+
+# Quickshell authentication dialog - enable dimaround
+layerrule = dimaround, quickshell-polkit-auth
+layerrule = blur,vicinae
+layerrule = dimaround,vicinae
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
