hypr: language switcher

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,11 +21,10 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = HYPRCURSOR_THEME,phinger-cursors-dark
-env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,32
 env = XCURSOR_THEME,phinger-cursors-dark
-env = XCURSOR_SIZE,24
+env = XCURSOR_SIZE,32
 env = QT_QPA_PLATFORMTHEME,qt5ct
-env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
@@ -154,7 +153,9 @@ dwindle {
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
+    orientation = center
 }
+
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
@@ -171,8 +172,8 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = us,adelman
+    kb_variant = ,
     kb_model =
     kb_options =
     kb_rules =
@@ -214,7 +215,10 @@ device {
 windowrule = float,class:^floating-sysmon$
 windowrule = size 1600 1200,class:^floating-sysmon$
 windowrule = center,class:^floating-sysmon$
-windowrulev2 = float, title:^(.*Network Manager.*)$
+windowrulev2 = float,class:(zen),title:(Extension:.*)
+windowrulev2 = float,title:^(.*Network Manager.*)$
+windowrulev2 = float,title:^(overskride)$
+windowrulev2 = float,class:(sol)
 
 # Window swallowing is configured in misc section above
 
