hypr: workmode and special

--- a/.config/hypr/conf/bindings.conf
+++ b/.config/hypr/conf/bindings.conf
@@ -31,9 +31,9 @@ bind = SUPER, SUPER_L, exec, $menu
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
 
-# Navigate workspaces with mainMod + arrow keys
-bind = $mainMod, Left, workspace, e-1
-bind = $mainMod, Right, workspace, e+1
+# Navigate workspaces with mainMod + arrow keys (smart navigation with workmode integration)
+bind = $mainMod, Left, exec, uwsm app -- ~/.config/hypr/scripts/smart-workspace-nav.sh left
+bind = $mainMod, Right, exec, uwsm app -- ~/.config/hypr/scripts/smart-workspace-nav.sh right
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -63,9 +63,13 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# Workmode special workspace
+bind = $mainMod, W, togglespecialworkspace, workmode
+bind = $mainMod SHIFT, W, movetoworkspace, special:workmode
+
+# Scroll through existing workspaces with mainMod + scroll (smart navigation with workmode integration)
+bind = $mainMod, mouse_down, exec, uwsm app -- ~/.config/hypr/scripts/smart-workspace-nav.sh down
+bind = $mainMod, mouse_up, exec, uwsm app -- ~/.config/hypr/scripts/smart-workspace-nav.sh up
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
