--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -219,6 +219,8 @@ windowrulev2 = float,class:(zen),title:(Extension:.*)
 windowrulev2 = float,title:^(.*Network Manager.*)$
 windowrulev2 = float,title:^(overskride)$
 windowrulev2 = float,class:(sol)
+windowrulev2 = size 1120 1300, class:(sol)
+
 
 # Window swallowing is configured in misc section above
 
