hypr: nicer workmode

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -208,6 +208,9 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
+# Workspace rules for special:workmode - remove borders and gaps for immersive VM experience
+workspace = special:workmode,gapsout:0,gapsin:0,bordersize:0,rounding:false
+
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
