hypr: keyboard switcher

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -175,7 +175,7 @@ input {
     kb_layout = us,adelman
     kb_variant = ,
     kb_model =
-    kb_options =
+    kb_options = grp:win_space_toggle
     kb_rules =
 
     follow_mouse = 1
