desktop: back to gtk portal

--- a/.config/xdg-desktop-portal/portals.conf
+++ b/.config/xdg-desktop-portal/portals.conf
@@ -1,5 +1,4 @@
 [preferred]
-# default=hyprland;gnome;gtk;
-default=hyprland;wlr;gnome;gtk;
-# org.freedesktop.impl.portal.FileChooser=gnome;
+default=hyprland;wlr;gtk;
+org.freedesktop.impl.portal.FileChooser=gtk;
 
