--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,3 +11,6 @@ map ctrl+equal change_font_size current +2.0
 map ctrl+minus change_font_size current -2.0
 font_size 16
 font_family JetBrainsMono Nerd Font Mono
+
+# send a newline literal, for claude-cli
+map shift+enter send_text all \n
