shell: back to hypridle

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,7 +1,7 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
+    lock_cmd = echo "lock" | nc -U /run/user/1000/quickshell-lock.sock       # trigger quickshell lock screen
     before_sleep_cmd = loginctl lock-session    # lock before suspend.
-    after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
+    after_sleep_cmd = niri msg action power-on-monitors  # turn monitors back on after sleep
 }
 
 listener {
@@ -17,8 +17,8 @@ listener {
 
 listener {
     timeout = 330                                                     # 5.5min
-    on-timeout = hyprctl dispatch dpms off                            # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on && brightnessctl -r          # screen on when activity is detected after timeout has fired.
+    on-timeout = niri msg action power-off-monitors                  # screen off when timeout has passed
+    on-resume = niri msg action power-on-monitors && brightnessctl -r          # screen on when activity is detected after timeout has fired.
 }
 
 listener {
