--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,11 @@
-ipc = off
+ipc = on
 preload = /home/bennyp/Pictures/Wallpaper/Catppuccin/stars.5k.png
+preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/coastal.jpg
+preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/game-room.jpg
+preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/goop.jpg
+preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/lake-tree.jpg
+preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/night-tree.jpg
+preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/space-car.jpg
+preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/space-tree.jpg
+preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/sunset-window.jpg
 wallpaper = , /home/bennyp/Pictures/Wallpaper/Catppuccin/stars.5k.png
