--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 general {
-    lock_cmd = echo "lock" | nc -U /run/user/1000/quickshell-lock.sock       # trigger quickshell lock screen
+    lock_cmd = quickshell ipc call lockscreen lock       # trigger quickshell lock screen
     before_sleep_cmd = loginctl lock-session    # lock before suspend.
     after_sleep_cmd = niri msg action power-on-monitors  # turn monitors back on after sleep
 }
