--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,6 +1,7 @@
 general {
-    lock_cmd = quickshell ipc call lockscreen lock       # trigger quickshell lock screen
-    before_sleep_cmd = loginctl lock-session    # lock before suspend.
+    lock_cmd = qs -c noctalia-shell ipc call lockScreen lock       # trigger quickshell lock screen
+    # before_sleep_cmd = loginctl lock-session    # lock before suspend.
+    before_sleep_cmd = qs -c noctalia shell ipc call lockScreen lock
     after_sleep_cmd = niri msg action power-on-monitors  # turn monitors back on after sleep
 }
 
@@ -12,7 +13,8 @@ listener {
 
 listener {
     timeout = 300                                 # 5min
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
+    # on-timeout = loginctl lock-session            # lock screen when timeout has passed
+    on-timeout = qs -c noctalia shell ipc call lockScreen lock
 }
 
 listener {
