--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -8,4 +8,4 @@ preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/night-tree.jpg
 preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/space-car.jpg
 preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/space-tree.jpg
 preload = /home/bennyp/Pictures/Wallpaper/Ultrawide/sunset-window.jpg
-wallpaper = , /home/bennyp/Pictures/Wallpaper/Catppuccin/stars.5k.png
+# wallpaper = , /home/bennyp/Pictures/Wallpaper/Catppuccin/stars.5k.png
