xdg: secrets portal

--- a/.config/xdg-desktop-portal/portals.conf
+++ b/.config/xdg-desktop-portal/portals.conf
@@ -1,4 +1,5 @@
 [preferred]
 default=gnome;gtk;
 # org.freedesktop.impl.portal.FileChooser=gtk;
+org.freedesktop.impl.portal.Secret=gnome-keyring;
 
