noctalia: update kitty when matugen

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,6 +12,7 @@ font_family FiraCode Nerd Font Mono
 map shift+enter send_text all \n
 
 
+allow_remote_control yes
 # BEGIN_KITTY_THEME
 # Noctalia
 include themes/noctalia.conf
