--- a/.config/kitty/themes/noctalia.conf
+++ b/.config/kitty/themes/noctalia.conf
@@ -1,24 +1,24 @@
-color0 #091615
+color0 #1b1206
 color1 #ffb4ab
-color2 #80d5d1
-color3 #a4d397
-color4 #94d786
-color5 #80d5d1
-color6 #a4d397
-color7 #d7e5e4
-color8 #7b9694
+color2 #f6bc70
+color3 #ffb3ae
+color4 #ffb3ae
+color5 #f6bc70
+color6 #ffb3ae
+color7 #f3dfcb
+color8 #a68c6f
 color9 #ffb4ab
-color10 #80d5d1
-color11 #a4d397
-color12 #94d786
-color13 #80d5d1
-color14 #a4d397
-color15 #d7e5e4
+color10 #f6bc70
+color11 #ffb3ae
+color12 #ffb3ae
+color13 #f6bc70
+color14 #ffb3ae
+color15 #f3dfcb
 
-cursor                #d7e5e4
-cursor_text_color     #091615
-background            #091615
-foreground            #d7e5e4
-selection_foreground  #b0ccca
-selection_background  #324b4a
-url_color             #94d786
+cursor                #f3dfcb
+cursor_text_color     #1b1206
+background            #1b1206
+foreground            #f3dfcb
+selection_foreground  #dec2a2
+selection_background  #57432b
+url_color             #ffb3ae
