--- a/.config/noctalia/user-templates.toml
+++ b/.config/noctalia/user-templates.toml
@@ -14,3 +14,8 @@
 input_path = "~/.config/nvim/lua/matugen-template.lua"
 output_path = "~/.config/nvim/lua/matugen.lua"
 post_hook = 'pkill -SIGUSR1 nvim'
+
+[templates.kitty-sigusr1]
+input_path = "/etc/xdg/quickshell/noctalia-shell/Assets/MatugenTemplates/Terminal/kitty.conf"
+output_path = "/home/bennyp/.config/kitty/themes/noctalia.conf"
+post_hook = 'pkill -SIGUSR1 kitty'
